--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       interval: 10s
       timeout: 10s
       retries: 120
+
   es02:
     image: "docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2"
     ports:
@@ -46,6 +47,7 @@ services:
       interval: 10s
       timeout: 10s
       retries: 120
+
   es03:
     image: "docker.elastic.co/elasticsearch/elasticsearch-oss:7.10.2"
     ports:
@@ -69,6 +71,7 @@ services:
       interval: 10s
       timeout: 10s
       retries: 120
+
   kibana:
     image: docker.elastic.co/kibana/kibana-oss:7.10.2
     depends_on:
@@ -82,7 +85,17 @@ services:
       - "5601:5601"
     environment:
       - 'ELASTICSEARCH_HOSTS=["http://es01:9200","http://es02:9200","http://es03:9200"]'
+
+  logstash:
+    image: "docker.elastic.co/logstash/logstash-oss:7.10.2"
+    ports:
+      - "5044:5044"
+    volumes:
+      - "./logstash.conf:/usr/share/logstash/config/logstash.conf"
+    command: ["logstash", "-f", "/usr/share/logstash/config/logstash.conf"]
+
 volumes:
   es-data-es01:
   es-data-es02:
   es-data-es03:
+  logstash-config:
